# jsdw.github.io

./: .gitignore  CNAME  README.md  app.css  browserconfig.xml  config.toml  cv.css  index.html  netlify.toml  page.js  robots.txt  sitemap.xml  update.sh
.github/workflows/: zola.yml
content/: _index.md  cv.md
content/posts/: _index.md
content/projects/: _index.md  angu.md  competitive-learner.md  compressor.md  fractal.md  fuss.md  git-backup.md  highscore.md  seamless.md  talklicker.md  vault-inject.md  wasm-fractal.md  weave.md  yap.md
cv/: index.html
posts/: index.html
posts/ajax-tools/: index.html  jw.engine.js  jw.state.js
posts/angular-services-and-di-demystified/: index.html
posts/angular-vs-react/: index.html  plunkr.html
posts/authenticating-users/: index.html
posts/competitive-learning/: index.html
posts/compression-machine/: index.html
posts/cpp-memory-pools/: index.html
posts/cpp11-new-additions/: index.html
posts/enigma1749/: index.html
posts/fractal-explorer/: index.html
posts/go-revisited-in-2025/: index.html
posts/haskell-an-introduction/: index.html
posts/haskell-another-lens-tutorial/: code.hs  index.html
posts/haskell-cont-monad/: index.html
posts/haskell-language-extensions/: examples.hs  index.html
posts/rust-asyncawait-preview/: Cargo.toml  index.html
posts/rust-asyncawait-preview/src/: main.rs
projects/: index.html
sass/: _katex.scss  _needsJs.scss  app.scss  cv.scss
static/: site.webmanifest
templates/: cv.html  home.html  index.html  macros.html  page.html  posts.html  project.html  projects.html
(+92 files in other folders)
